--- a/pipeline-taskcat.yml
+++ b/pipeline-taskcat.yml
@@ -5,11 +5,11 @@ Parameters:
   GitHubUser:
     Type: String
     Description: GitHub User
-    Default: "Vaidyanath"
+    Default: "PaulDuvall"
   GitHubRepo:
     Type: String
     Description: GitHub Repo to pull from. Only the Name. not the URL
-    Default: "taskcat-example"
+    Default: "aws-encryption-workshop"
   GitHubBranch:
     Type: String
     Description: GitHub Branch
